avahi (0.5-1) UNRELEASED; urgency=low

  [ Ross Burton ]
  * New upstream release.
  * Build for Debian Experimental (closes: #324990)
  * Split out python2.4-avahi
  * Add QT3 and QT4 bindings
  * Reload D-BUS configuration files and daemons on install
  * Fix daemon prerm
  * Add maintainer scripts for dnsconfd
  * Move the avahi user's home directory
  * Move .pc files to -dev packages

  [ Sjoerd Simons ]
  * New upstream release 

 -- Sjoerd Simons <sjoerd@debian.org>  Sun, 25 Sep 2005 12:31:09 +0200

avahi (0.2-0ubuntu1) breezy; urgency=low

  * New upstream version.
  * Thanks to Trent Lloyd for the work
    - Dropped all old patches, now merged upstream.
    - Added new patch avahi-dnsconfd-crash.patch, fix from upstream.

 -- Ross Burton <ross@debian.org>  Tue, 30 Aug 2005 09:13:46 +0100

avahi (0.1-1) breezy; urgency=low

  * First upload.
  * Thanks to Trent Lloyd for reviewing the packages.

 -- Ross Burton <ross@debian.org>  Tue, 23 Aug 2005 09:29:46 +0100