@@ -2,7 +2,7 @@ Source: avahi
 Section: net
 Priority: optional
 Maintainer: Ross Burton <ross@debian.org>
-Build-Depends: debhelper (>= 4.2.28), cdbs, libglib2.0-dev (>= 2.4), libgtk2.0-dev (>= 2.4), libglade2-dev, libexpat-dev, libdaemon-dev, libdbus-1-dev (>= 0.30), python2.4 (>= 2.4), python2.4-gdbm, python2.4-dbus, libqt3-mt-dev, libqt4-dev, xmltoman
+Build-Depends: debhelper (>= 4.2.28), cdbs, libglib2.0-dev (>= 2.4), libgtk2.0-dev (>= 2.4), libglade2-dev, libexpat-dev, libdaemon-dev, libdbus-1-dev (>= 0.30), python2.4 (>= 2.4), python2.4-gdbm, python2.4-dbus, python2.4-gtk2, libqt3-mt-dev, libqt4-dev, xmltoman, mono-mcs (>= 1.0) | c-sharp-compiler, cli-common (>= 0.2.0), mono-gac
 Standards-Version: 3.6.2
 
 Package: avahi-daemon
@@ -235,3 +235,16 @@ Description: Development headers for the Avahi QT4 integration library
  .
  This package contains the development headers for the interface
  to integrate the Avahi libraries  into a QT4 main loop application.
+
+Package: libavahi-cil
+Architecture: any
+Depends: ${cli:Depends}, libavahi-client1
+Description: CLI bindings for Avahi
+ Avahi is a fully LGPL framework for Multicast DNS Service Discovery.
+ It allows programs to publish and discover services and hosts
+ running on a local network with no specific configuration.  For
+ example you can plug into a network and instantly find printers to
+ print to, files to look at and people to talk to.
+ .
+ This package contains the CLI bindings to Avahi, allowing you to use Avahi from
+ Mono languages (e.g. C# and Boo).
