@@ -1,0 +1,2 @@
+debian/tmp/usr/lib/mono/*
+debian/tmp/usr/lib/pkgconfig/avahi-sharp.pc
