@@ -13,10 +13,14 @@ common-binary-post-install-arch:: list-missing
 LDFLAGS += -Wl,-z,defs -Wl,-O1
 
 DEB_INSTALL_DOCS_ALL += docs/README
-DEB_CONFIGURE_EXTRA_FLAGS += --disable-mono --disable-mono-docs
+DEB_CONFIGURE_EXTRA_FLAGS += --disable-mono-docs
 
 DEB_DH_MAKESHLIBS_ARGS_ALL := -V
 DEB_SHLIBDEPS_INCLUDE := debian/libavahi-common0/usr/lib debian/libavahi-core0/usr/lib
+
+common-binary-predeb-indep::
+	dh_makeclilibs
+	dh_clideps
 
 binary-install/avahi-utils::
 	dh_python -p$(cdbs_curpkg)
